# led_stick

./: .gitignore  CMakeLists.txt  README.md  install.sh
camera/: Makefile  camera  main.cpp  mycamera.hpp
circle/: Makefile  main.cpp
image_writer/: Makefile  image_loader.rb  image_writer  main.cpp
lib/: bcm2835.h  build.sh  i2c-dev.h  i2c.h  spidev.h  stick_sdk.c  stick_sdk.cpp  stick_sdk.h
libstick/: CMakeLists.txt  Makefile  README.md  gpio.c  gpio.h  i2c.c  i2c.h  mpu6050reg.h  pwm.c  pwm.h  spi.c  spi.h  stick.c  stick.h
libstick/gpiotest/: Makefile  main.c
libstick/i2ctest/: Makefile  main.c  mpu6050.c  mpu6050.h
libstick/mpu6050test/: Makefile  mpu6050.c
libstick/pwmtest/: Makefile  main.c
libstick/spitest/: Makefile  main.c  spi.c
mori/: Makefile  main.cpp  mori
mpu6050/: Makefile  main.c  mpu6050.h
mpu6050test/: Makefile  i2c.c  i2c.h  mpu6050reg.h
picamera/: install.sh
python/: scan.py  test.py
rotate/: Makefile  main.cpp  rotate
ruby/: bcm2835.rb  button.rb  def.rb  demo.rb  led.rb  led2.rb  mpu9250.rb  range.rb  sensor.rb  stick_sdk.rb  stick_sdk_test.rb  test.rb  test_stick2.rb  test_stick_sdk.rb
sato/: Makefile  main.cpp  stick_sdk.c
show_pic/: Makefile  main.cpp  show_pic
show_pic2/: Makefile  main.cpp  show_pic
show_pics/: CMakeLists.txt  Makefile  README.md  main.cpp  show_pics.service
spitest/: Makefile  main.c  spi.c
test2gyro/: Makefile  main.cpp
test_sato/: Makefile  main.cpp  mpu9250reg.h  stick_sdk.c
text/: Makefile  main.cpp  text
udp/: Makefile  main.cpp  udp
